[ios] Fix integer truncation in NTP incognito animation.

Bug: 732361
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: If339db655f69d107f5b5978631e42a170b6c36ea
Reviewed-on: https://chromium-review.googlesource.com/800731
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520558}
Former-commit-id: 35b77300017be7905dc0a84ebb5c96aa21be909f